# test-claude

./: README.md  main.py  pyproject.toml
app/: __init__.py  main.py  summarizer.py  text_parser.py
frontend/: README.md  index.html  package.json
frontend/src/: App.jsx
tests/: __init__.py  test_main.py  test_summarizer.py  test_text_parser.py
